--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "WDS Production",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
-    "web": "webpack-dev-server --mode development --devtool inline-source-map --hot",
+    "start": "webpack --config webpack.prod.js",
+    "web": "webpack-dev-server --open --config webpack.dev.js",
     "test": "echo \"Error: no test specified\""
   },
   "dependencies": {
@@ -34,7 +34,8 @@
     "schedule": "0.4.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "^3.1.3",
+    "webpack-merge": "^4.2.1"
   },
   "prettier": {
     "bracketSpacing": false,
